--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "visual",
   "dependencies": {
-    "d3": "^4.9.1",
     "powerbi-visuals-utils-dataviewutils": "^2.2.1"
   },
   "devDependencies": {
-    "@types/d3": "^3.5.43",
-    "powerbi-visuals-api": "~2.6.1",
+    "powerbi-visuals-api": "^2.6.2",
     "ts-loader": "6.1.0",
     "tslint": "^5.18.0",
     "tslint-microsoft-contrib": "^6.2.0",
